# template

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  justfile  new-project.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/hooks/: pre-commit-check.py
.claude/skills/code-review/: SKILL.md
.claude/skills/refactor/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/scaffold/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
.windsurf/workflows/: organize-files.md
docs/: ONBOARDING.md  SECURITY.md  ai-project-structure.md  architecture.md
src/: main.py  scaffold.py
src/api/: CLAUDE.md
src/core/: CLAUDE.md
src/persistence/: CLAUDE.md
src/utils/: CLAUDE.md
tests/: conftest.py  test_main.py
